--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 
-/* ヘッダーグループ */
+/* header グループ */
 
 header {
     display: flex;
@@ -54,13 +54,70 @@ nav a {
 }
 
 
-/* メイングループ */
+/* main グループ */
 
 main {
     width: 100%;
     height: fit-content;
 }
 
+    /* main-visual グループ */
+
+#main-visual {
+    width: 100%;
+    height: 600px;
+    margin-bottom: 80px;
+}
+
 #main-visual img {
     width: 100%;
+    max-width: 1920px;
+    height: 600px;
+    object-fit: cover;
 }
+
+    /* sectionタグ グループ */
+
+.wrapper {
+    position: relative;
+    max-width: 960px;
+    text-align: center;
+    margin: 0 auto 100px;
+}
+
+.section-title {
+    display: inline-block;
+    font-size: 2rem;
+    width: fit-content;
+    margin-bottom: 60px;
+    border-bottom: 1px solid #000;
+}
+
+.content {
+    display: flex;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.content-title {
+    font-size: 1rem;
+    margin: 10px 0;
+}
+
+        /* about セクション */
+
+#about img {
+    width: 100px;
+    margin-right: 50px;
+    border-radius: 50%;
+}
+
+.text {
+    text-align: left;
+    max-width: 450px;
+    text-wrap: wrap;
+}
+
+        /* bicycle セクション */
