--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ header {
     width: 80%;
     height: 60px;
     margin: 0 auto;
+    text-align: center;
+    justify-content: space-between;
     padding: 0 50px;
 }
 
@@ -30,15 +32,14 @@ header {
     width: 100%;
 }
 
-
 header nav {
     display: block;
-    height: fit-content;
-    margin: auto 0 auto auto;
+    align-content: center;
 }
 
 nav ul {
     display: flex;
+    align-items: center;
     column-gap: 30px;
 }
 
