--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
     height: fit-content;
 }
 
+footer {
+    padding: 5px 0;
+    text-align: center;
+    font-size: 0.75rem;
+}
+
 
 /* header グループ */
 
