--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,95 @@ main {
     display: block;
     text-wrap: wrap;
 }
+
+
+/* 以下は課題範囲外の実装 */
+
+/* トグルバー */
+
+.toggle-container {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+}
+
+.toggle-label {
+    width: 50px;
+    height: 25px;
+    margin: 0 auto;
+    border-radius: 12.5px;
+    border: 3px outset #ccc;
+    background: radial-gradient(#444, #777);
+}
+
+.toggle-input {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 19px;
+    height: 19px;
+    border-radius: 50%;
+    border: 2px outset #ffcccc;
+    background: radial-gradient(rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.1));
+    transition: 1s;
+}
+
+.toggle-input.active {
+    position: absolute;
+    border: 2px outset #ccffcc;
+    background: radial-gradient(rgba(0, 255, 0, 1), rgba(0, 255, 0, 0.1));
+    transform: translateX(-100%) translateX(-5px);
+    transition: 1s;
+}
+
+.toggle-info {
+    display: flex;
+    height: fit-content;
+    text-align: center;
+    justify-content: center;
+}
+
+.info-icon {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.toggle-text {
+    text-wrap: nowrap;
+    font-size: 0.8em;
+}
+
+
+/* ダイアログ */
+
+#dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 200px;
+    text-align: center;
+    border-radius: 10px;
+    border: grey outset 2px;
+}
+
+.dialog-main {
+    height: auto;
+    height: 125px;
+    overflow-y: scroll;
+}
+
+dialog text {
+    font-size: 1.5rem;
+}
+
+#dialog-submit {
+    position: fixed;
+    bottom: 5px;
+}
